<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hydrolab</name>
  <version>0.0.0</version>
  <description>drone controller (rusz z p.A do p.B w p.B wykryj aruko obniz sie o xm wroc do p.B i wroc do p.A)</description>
  <maintainer email="krzyskuar@gmail.com">krzychu</maintainer>
  <license>Bruh nie teraz</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
